--- a/baidu/day02/index.html
+++ b/baidu/day02/index.html
@@ -5,30 +5,31 @@
        <meta name="viewport" content="width=device-width,initial-scale=1.0" />
        <meta http-equiv="X-UA-Compatibal" content="IE=edge" />
        <title> day02 </title>
+       <link rel="stylesheet" href="./index.css" />
     </head>
     <body>
          <div id="container">
             <h1> 简历 </h1>
             <span> 姓名：</span>
-            <input type="text" value=""/>
+            <span> kangkang </span>
             <h2> 项目经历 </h2>
             <h3> 项目1： </h3>
             <ol>
-             <li><input type="text" value=""/></li>
-             <li><input type="text" value=""/></li>
-             <li><input type="text" value=""/></li>
+             <li>xxxxxxxxx</li>
+             <li>xxxxxxxxx</li>
+             <li>xxxxxxxxx</li>
             </ol>
             <h3> 项目2： </h3>
             <ol>
-                    <li><input type="text" value=""/></li>
-                    <li><input type="text" value=""/></li>
-                    <li><input type="text" value=""/></li>
+                    <li>xxxxxxxxx</li>
+                    <li>xxxxxxxxx</li>
+                    <li>xxxxxxxxx</li>
             </ol>
             <h3> 项目3： </h3>
             <ol>
-                    <li><input type="text" value=""/></li>
-                    <li><input type="text" value=""/></li>
-                    <li><input type="text" value=""/></li>
+                    <li>xxxxxxxxx</li>
+                    <li>xxxxxxxxx</li>
+                    <li>xxxxxxxxx</li>
             </ol>
         </div>
     </body>
