--- a/baidu/day02/index.html
+++ b/baidu/day02/index.html
@@ -10,27 +10,44 @@
     <body>
          <div id="container">
             <h1> 简历 </h1>
-            <span> 姓名：</span>
-            <span> kangkang </span>
+        <div class="basis">
+           <table>
+               <tr>
+                   <td>姓名：赵英刚</td>
+                   <td>年龄：21</td>
+                   <td rowspan="2"><img src="./images/10d118bfe2a70421.jpg" alt="加载中"/></td>
+               </tr>
+               <tr>
+                   <td>籍贯：重庆</td>
+                   <td>最高学历：本科</td>
+               </tr>
+           </table>
+        </div>
+        <diV class="content">
             <h2> 项目经历 </h2>
+            <hr/>
             <h3> 项目1： </h3>
+            <hr/>
             <ol>
              <li>xxxxxxxxx</li>
              <li>xxxxxxxxx</li>
              <li>xxxxxxxxx</li>
             </ol>
             <h3> 项目2： </h3>
+            <hr/>
             <ol>
                     <li>xxxxxxxxx</li>
                     <li>xxxxxxxxx</li>
                     <li>xxxxxxxxx</li>
             </ol>
             <h3> 项目3： </h3>
+            <hr/>
             <ol>
                     <li>xxxxxxxxx</li>
                     <li>xxxxxxxxx</li>
                     <li>xxxxxxxxx</li>
             </ol>
         </div>
+    </diV>
     </body>
 </html>
