--- a/baidu/day02/index.html
+++ b/baidu/day02/index.html
@@ -19,12 +19,12 @@
                </tr>
                <tr>
                    <td>籍贯：重庆</td>
-                   <td>最高学历：本科</td>
+                   <td id="study" style="cursor: pointer;" >最高学历：本科</td>
                </tr>
            </table>
         </div>
         <diV class="content">
-            <h2> 项目经历 </h2>
+            <h2 id="experience" style="cursor: pointer;"> 项目经历 </h2>
             <hr/>
             <h3> 项目1： </h3>
             <hr/>
@@ -49,5 +49,15 @@
             </ol>
         </div>
     </diV>
+    <script>
+       var exp = document.getElementById("experience");
+       var study = document.getElementById("study");
+       exp.onclick = function(){
+           console.log("其实我还没有项目经历诶（手动捂脸）");
+       }
+       study.onclick = function(){
+         study.innerText = "重庆邮电大学";  
+       }
+    </script>
     </body>
 </html>
