--- a/baidu/day17/js_17_2.html
+++ b/baidu/day17/js_17_2.html
@@ -47,7 +47,7 @@ function dec2bin(decNumber) {
         document.getElementById("bin-bit").value = "";
     }
 }
-/* 用除2取余的算法将十进制转化为二进制： 例子{
+/* 用除2取余的算法将十进制转化为二进制： 例子
     25 / 2 = 12.....1;
     12 / 2 = 6 .....0;
     6  / 2 = 3 .....0;
