--- a/baidu/day30/simple.html
+++ b/baidu/day30/simple.html
@@ -43,7 +43,7 @@
                 </table> -->
             </div>
         </div>
-        <script src="./ife31data.js"></script>
+        <script src="./js/ife31data.js"></script>
         <script>
             var btn = document.getElementById("makesure");
             var myRegion = document.getElementById("region");
