--- a/baidu/day37/st.html
+++ b/baidu/day37/st.html
@@ -14,6 +14,7 @@
         font-size: 20px;
         border: 1px solid #ccc;
         position: relative;
+        outline: none;
     }
     td input{
         width: 80px;
@@ -25,7 +26,8 @@
         content: "编辑";
         display: inline-block;
         font-size: 9px;
-        vertical-align: top; 
+        vertical-align: top;
+        cursor: pointer; 
     }
     td button{
         position: relative;
