--- a/baidu/day44/index.html
+++ b/baidu/day44/index.html
@@ -1,11 +1,121 @@
 <!DOCTYPE html>
 <html>
-    <meta charset="utf-8">
-    <title> day44 </title>
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <head>
+        <meta charset="utf-8">
+        <title> day44 </title>
+        <meta name="viewport" content="width=device-width,initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    </head>
+    <style>
+/* 圣杯 */
+    *{
+        margin: 0;
+        padding: 0;
+    }
+    header{
+        width: 100%;
+        height: 200px;
+        background-color: #ccc;
+    }
+    footer{
+        clear: both;
+        width: 100%;
+        height: 200px;
+        background-color: #ccc;
+    }
+    .container {
+        padding: 0 150px 0 200px; 
+        /* 此处使用的是padding */
+        width: 100%;
+        height: 400px;
+        box-sizing: border-box;
+   
+    }
+    .container .column{
+        float: left;
+    }
+    .middle{
+        height: 400px;
+        width: 100%;
+        background-color: aqua;
+    }
+    .left{
+        position: relative;
+        right: 200px;
+        width: 200px;
+        height: 400px;
+        margin-left: -100%;
+        background-color: aquamarine;
+    }
+    .right{
+        height: 400px;
+        width: 150px;
+        margin-right: -150px;
+        background-color: blue;
+    }
+    
+/* 双飞翼 */
+/*
+    *{
+        margin: 0;
+        padding: 0;
+    }
+    header{
+        width: 100%;
+        height: 200px;
+        background-color: #ccc;
+    }
+    footer{
+        clear: both;
+        width: 100%;
+        height: 200px;
+        background-color: #ccc;
+    }
+    #container{
+        width: 100%;
+    }
+    .column{
+        float: left;
+    }
+    #middle{
+        margin-left: 200px;
+        margin-right: 150px;  
+        /* 此处使用的是margin 
+        height: 400px;
+        background-color: aqua;
+    }
+    #left{
+        width: 200px;
+        height: 400px;
+        margin-left: -100%;
+        background-color: aquamarine;
+    }
+    #right{
+        width: 150px;
+        height: 400px;
+        margin-left: -150px;
+        background-color: blue;
+    } */
+    
+    </style>
     <body>
-        <div class="container"></div>
-        <script src="./js/restaurant.js"></script>
+        <!-- 圣杯布局 -->
+        <header> HEADER</header>
+        <div class="container">
+            <div class="middle column">middle</div>
+            <div class="left column">left</div>
+            <div class="right column">right</div>
+        </div>
+        <footer>FOOTER</footer>
+
+        <!-- 双飞翼布局 -->
+        <!-- <header>HEADER</header>
+        <div id="container" class="column">
+            <div id="middle">MIDDLE</div>
+        </div>
+        <div id="left"   class="column">LEFT</div>
+        <div id="right"  class="column">RIGHT</div>
+        <footer>FOOTER</footer>   
+        <script src="./js/restaurant.js"></script> -->
     </body>
 </html>
